# bsky-deleter

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
