[package]
name = "bsky-deleter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
atrium-api = "0.24.10"
bsky-sdk = {version = "0.1.15"}
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
config = "0.15.15"
dialoguer = "0.12.0"
duration-str = "0.17.0"
ipld-core = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
