[package]
name = "bsky-deleter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
atrium-api = "0.24.10"
bsky-sdk = {version = "0.1.15"}
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.19"
dialoguer = "0.12.0"
duration-str = "0.21.0"
ipld-core = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
